# bazel

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
cmake/: BUILD.bazel
cpp/: BUILD  hello-world.cc
go/: BUILD.bazel  main.go
go/grpc-gateway/: BUILD  echo.go  echo_service.proto  main.go
go/grpc-gateway/echo/: .echo.go.swp  BUILD  echo.go  echo_service.proto
go/grpc-gateway/gateway/: BUILD  gateway.go  handlers.go  main.go
go/portal/: BUILD  package.json
go/portal/src/Component/Book/: index.js
javascript/: BUILD  package.json  server.js
javascript/portal/: BUILD
javascript/portal/src/: App.js
javascript/portal/src/Component/Book/: index.js
jsonnect/: BUILD  wordcount.json  wordcount.jsonnet  workflow.libsonnet
proto/api/: BUILD  api.proto  interface.proto
proto/log/: BUILD  event.proto
python/: BUILD  deps.proto  py_deps.py  try_proto.py
toolchain/: BUILD  cc_toolchain_config.bzl
