load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package_group(
    name = "go_visibility",
    packages = [
        "//go/...",
    ],
)

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/go",
    visibility = [":go_visibility"],
)

go_binary(
    name = "go",
    data = ["//go/portal:build"],
    embed = [":go_lib"],
    visibility = ["go_visibility"],
)
